--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^1.2.3",
     "bin-version-check-cli": "^3.0.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "ffmpeg-static": "^5.1.0",
     "loglevel": "^1.8.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
+    "request": "^2.88.2",
     "ytdl-core": "^4.11.2"
   }
 }
